Update index.html with proper HTML structure
Fix HTML structure and correct typos in index.html.

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -1,1 +1,16 @@
-
+<DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="UTF-8">
+      <titele>Web Dev:Lab1</titele>
+    </head>
+    <body>
+      <center>
+        <h1>Welcome to my Web Site</h1>
+        <h3><u>Web Development(Lab1)</u></h3>
+      </center>
+      <p><b>Age:</b>20years old</b></p>
+      <p><b>Class:</b>2<sup>nd</sup>LMD computer Science</b></p>
+      <p><b>University:</b>University of EL OUED</p>
+    </body>
+  </html>
