--- a/lab1/index.html
+++ b/lab1/index.html
@@ -9,6 +9,7 @@
         <h1>Welcome to my Web Site</h1>
         <h3><u>Web Development(Lab1)</u></h3>
       </center>
+      <p><b>Full name:ISMAIL LABBI</p>
       <p><b>Age:</b>20years old</b></p>
       <p><b>Class:</b>2<sup>nd</sup>LMD computer Science</b></p>
       <p><b>University:</b>University of EL OUED</p>
