Update personal information section in index.html

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
         <h3><u>Web Development(Lab1)</u></h3>
       </center>
       <br>
-      <p><b>Full name:</b>ISMAIL LABBI</p>
-      <p><b>Age:</b>20years old</p>
-      <p><b>Class:</b>2<sup>nd</sup>LMD computer Science</b></p>
-      <p><b>University:</b>University of EL OUED</p>
+      <p class="info"><span class="info">First Name: </span><b class="style">ISMAIL</b></p>
+    <p class="info"><span class="info">Last Name: </span><b class="style">LABBI</b></p>
+    <p class="info"><span class="info">Age: </span><b class="style">20</b></p>
+    <p class="info"><span class="info">Class: </span><b class="style">2 Computer Science</b></p>
+    <p class="info"><span class="info">University: </span><b class="style">University of Eloud</b></p>
+      
     </body>
   </html>
